feat: register user.

--- a/template/login.html
+++ b/template/login.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h3>Login page</h3>
+    <p>{{ .message }}</p>
     <form action="#" method="post">
         <input type="text" name="name" placeholder="Username">
         <input type="text" name="password" placeholder="Password">
